# template_django_pdm

./: .env.example  .env.exemplo  .env.sample  .gitignore  .isort.cfg  .pdm-python  README.md  build.sh  db.sqlite3  dump.json  pyproject.toml  render.yaml  requirements.txt
__pypackages__/: REAME.md
app/: pagination.py  settings.py  urls.py
config/: settings.py
core/: admin.py  authentication.py
core/migrations/: 0001_initial.py  0002_alter_user_is_active_alter_user_name.py  0003_alter_user_is_active_alter_user_is_staff_and_more.py  0004_alter_user_email_alter_user_passage_id.py  0005_remove_user_passage_id.py  0006_freelance.py  0007_alter_freelance_tag.py  0008_user_profile_image_alter_freelance_descricao.py
core/models/: __init__.py  freelance.py  user.py
core/serializers/: __init__.py  freelance.py  login.py  user.py
core/views/: __init__.py  freelance.py  login.py  token.py  user.py
scripts/: cria_api.py  set_my_ip.py
